--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 2026",
     "lint": "eslint",
     "migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push"
