--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start -p 2026",
     "lint": "eslint",
     "migrate:deploy": "prisma migrate deploy",
@@ -14,6 +15,7 @@
     "@ant-design/icons": "^6.1.0",
     "@prisma/adapter-mariadb": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "prisma": "7.1.0",
     "antd": "^6.1.0",
     "better-auth": "^1.4.6",
     "next": "16.0.7",
