添加了很多数据展示 、post

--- a/package.json
+++ b/package.json
@@ -13,19 +13,31 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@mdx-js/mdx": "^3.1.1",
     "@prisma/adapter-mariadb": "^7.1.0",
     "@prisma/client": "^7.1.0",
-    "prisma": "7.1.0",
+    "@shikijs/transformers": "^3.20.0",
     "antd": "^6.1.0",
     "better-auth": "^1.4.6",
+    "github-slugger": "^2.0.0",
+    "hast": "^0.0.2",
+    "html-to-text": "^9.0.5",
     "next": "16.0.7",
+    "next-mdx-remote": "^5.0.0",
+    "prisma": "7.1.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,5 +47,4 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   }
-
 }
